# high-performance-computing

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt
additional/: distance.out  distance_mpi4py.py  execution_snippets.md  original.py  submit.slurm
cuda/: CMakeLists.txt  distance.cu  distance.out  knn_cuda_nsys.nsys-rep  knn_cuda_nsys.sqlite  knn_ref.cpp  submit.slurm
cuda/build_t16/: distance
cuda/build_t32/: distance
cuda/build_t8/: distance
mpi/: CMakeLists.txt  distance.out  execution_snippets.md  original_run.py  run.py  submit.slurm
mpi/source/: distance_bindings.cpp  distance_core.cpp  distance_main.cpp  original_mpi.cpp
openmp/: CMakeLists.txt  distance.out  run.py  submit.slurm
openmp/source/: distance_core_serial.cpp  distance_main_serial.cpp  naive.md
serial/: CMakeLists.txt  README.md  distance.out  submit.slurm
serial/source/: distance_bindings.cpp  distance_core.cpp  distance_core_serial.cpp  distance_main.cpp  distance_main_serial.cpp
